<?xml version="1.0" encoding="UTF-8"?>
<!--

    Copyright (C) 2022-2024 Agence du Numérique en Santé (ANS) (https://esante.gouv.fr)

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

            http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.5.0</version>
		<relativePath /> <!-- lookup parent from repository -->
	</parent>
	<groupId>fr.ans.psc</groupId>
	<artifactId>pscextract</artifactId>
	<version>0.2.0</version>
	<name>pscextract</name>
	<inceptionYear>2022-2024</inceptionYear>
	<description>Demo project for Spring Boot</description>

        <scm>
          <connection>scm:git:${project.basedir}</connection>
          <tag>0.2.0</tag>
        </scm>

	<properties>
		<java.version>11</java.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-mail</artifactId>
		</dependency>

		<dependency>
			<groupId>com.github.tomakehurst</groupId>
			<artifactId>wiremock-jre8</artifactId>
			<version>2.35.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-all</artifactId>
			<version>1.10.19</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.awaitility</groupId>
			<artifactId>awaitility</artifactId>
			<version>4.2.0</version>
			<scope>test</scope>
		</dependency>

		<!-- https://mvnrepository.com/artifact/com.univocity/univocity-parsers -->
		<dependency>
			<groupId>com.univocity</groupId>
			<artifactId>univocity-parsers</artifactId>
			<version>2.9.0</version>
		</dependency>

		<dependency>
			<groupId>fr.ans.psc</groupId>
			<artifactId>psc-api-client</artifactId>
			<version>2.2.22</version>
		</dependency>

	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<!-- license  mvn license:format -->
			<plugin>
				<groupId>com.mycila</groupId>
				<artifactId>license-maven-plugin</artifactId>
				<version>2.11</version>
				<configuration>
					<header>com/mycila/maven/plugin/license/templates/APACHE-2.txt</header>
					<properties>
						<owner>Agence du Numérique en Santé (ANS)</owner>
						<email>https://esante.gouv.fr</email>
					</properties>
					<excludes>
						<exclude>LICENSE.txt</exclude>
						<exclude>Dockerfile</exclude>
						<exclude>**/README</exclude>
						<exclude>src/main/packaging/**</exclude>
						<exclude>src/test/resources/**</exclude>
						<exclude>src/main/resources/**</exclude>
						<exclude>src/main/webapp/**</exclude>
						<exclude>node_modules/**</exclude>
						<exclude>dist/**</exclude>
						<exclude>.tmp/**</exclude>
						<exclude>settings-docker.xml</exclude>
						<exclude>**/*.properties</exclude>
					</excludes>
				</configuration>
			</plugin>
			<!-- END license -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<argLine>-Xmx4g @{argLine}</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.google.cloud.tools</groupId>
				<artifactId>jib-maven-plugin</artifactId>
				<version>3.0.0</version>
				<configuration>
					<from>
						<image>prosanteconnect/pscextract-base</image>
					</from>
					<to>
						<image>prosanteconnect/pscextract</image>
						<tags>
							<tag>latest</tag>
							<tag>${project.version}</tag>
						</tags>
					</to>
					<container>
						<user>daemon:daemon</user>
						<mainClass>fr.ans.psc.pscextract.PscextractApplication</mainClass>
						<args>
							<arg>--server.servlet.context-path=/pscextract/v1</arg>
						</args>
						<ports>
							<port>8080</port>
						</ports>
						<format>Docker</format>
						<!--this sacrifices reproducibility since the timestamp will change with every build-->
						<creationTime>USE_CURRENT_TIMESTAMP</creationTime>
						<!--<creationTime>2020-09-01T10:15:30+09:00</creationTime>-->
					</container>
					<extraDirectories>
						<paths>
							<path>
								<from>src/main/extract-repo</from>
								<!--repo where the extract will be stored, volume will be mapped with pwx driver-->
								<into>/app/extract-repo</into>
							</path>
						</paths>
					</extraDirectories>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.7</version>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>report</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<configuration>
					<argLine>
						--illegal-access=permit @{argLine}
					</argLine>
				</configuration>
			</plugin>
			<!-- site lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle -->
			<plugin>
				<artifactId>maven-site-plugin</artifactId>
				<version>3.7.1</version>
			</plugin>
			<plugin>
				<artifactId>maven-project-info-reports-plugin</artifactId>
				<version>3.0.0</version>
			</plugin>
		</plugins>
	</build>

	<repositories>
		<repository>
			<id>github-prosanteconnect</id>
			<url>https://maven.pkg.github.com/ansforge/psc-components</url>
		</repository>
	</repositories>

</project>
